--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader-Board</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/all.min.css">
 </head>
 <body>
     <header>
@@ -44,7 +45,7 @@
         </section>
         <section>
             <h1 class="section-title">Top Blogs</h3>
-            <div class="logs">
+            <div class="blogs">
                  <article class="blog">
                     <div class="thumbnail">
                          <img src="images/Mask Group.png" alt="">
@@ -85,6 +86,71 @@
             </div>
     
         </section>
+        <section>
+            <h1 class="section-title">Lates Course</h1>
+            <div class="courses">
+                <div class="courses">
+                     <img src="images/Mask Group-3.png" alt="">
+                     <div class="course-detail">
+                          <h3>React Complete Guide 2022 </h3>
+                          <p><a href="">Reed Krakoff.</a></p>
+                          <div class="course-info">
+                               <div class="ratings">
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star filled"></i>
+                                    <i class="fas fa-star unfilled"></i>
+                               </div>
+                               <div class="duration">
+                                   <i class="far fa-clock"></i>
+                                   <span>1:30hr</span>
+                                </div>
+                           </div>
+                      </div>
+                </div>
+                <div class="courses">
+                    <img src="images/Mask Group-4.png" alt="">
+                    <div class="course-detail">
+                         <h3>React Complete Guide 2022 </h3>
+                         <p><a href="">Reed Krakoff.</a></p>
+                         <div class="course-info">
+                              <div class="ratings">
+                                   <i class="fas fa-star filled"></i>
+                                   <i class="fas fa-star filled"></i>
+                                   <i class="fas fa-star filled"></i>
+                                   <i class="fas fa-star filled"></i>
+                                   <i class="fas fa-star unfilled"></i>
+                              </div>
+                              <div class="duration">
+                                  <i class="far fa-clock"></i>
+                                  <span>1:30hr</span>
+                               </div>
+                          </div>
+                     </div>
+               </div>
+               <div class="courses">
+                <img src="images/Mask Group-5.png" alt="">
+                <div class="course-detail">
+                     <h3>React Complete Guide 2022 </h3>
+                     <p><a href="">Reed Krakoff.</a></p>
+                     <div class="course-info">
+                          <div class="ratings">
+                               <i class="fas fa-star filled"></i>
+                               <i class="fas fa-star filled"></i>
+                               <i class="fas fa-star filled"></i>
+                               <i class="fas fa-star filled"></i>
+                               <i class="fas fa-star unfilled"></i>
+                          </div>
+                          <div class="duration">
+                              <i class="far fa-clock"></i>
+                              <span>1:30hr</span>
+                           </div>
+                      </div>
+                 </div>
+           </div>
+           </div>
+    </section>
     </main>
 </body>
 </html>
