--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leader-Board</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/all.min.css">
 </head>
@@ -89,7 +91,7 @@
         <section>
             <h1 class="section-title">Lates Course</h1>
             <div class="courses">
-                <div class="courses">
+                <div class="course">
                      <img src="images/Mask Group-3.png" alt="">
                      <div class="course-detail">
                           <h3>React Complete Guide 2022 </h3>
@@ -109,7 +111,7 @@
                            </div>
                       </div>
                 </div>
-                <div class="courses">
+                <div class="course">
                     <img src="images/Mask Group-4.png" alt="">
                     <div class="course-detail">
                          <h3>React Complete Guide 2022 </h3>
@@ -129,7 +131,7 @@
                           </div>
                      </div>
                </div>
-               <div class="courses">
+               <div class="course">
                 <img src="images/Mask Group-5.png" alt="">
                 <div class="course-detail">
                      <h3>React Complete Guide 2022 </h3>
